--- a/package.json
+++ b/package.json
@@ -1,18 +1,21 @@
 {
   "name": "homebridge-yet-another-ping",
   "description": "Yet Another Ping is a HomeBridge plugin to detect device power state based on period of ping reponses",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "main": "index.js",
   "devDependencies": {
-    "homebridge": "^1.3.5",
     "nodemon": "^2.0.15"
   },
   "dependencies": {
     "nodejs-ping-wrapper": "^1.1.0"
   },
+  "funding": {
+    "type": "buymeacoffee",
+    "url": "https://buymeacoffee.com/dwaan"
+  },
   "engines": {
-    "node": ">=14.0.0",
-    "homebridge": ">=1.1.0"
+    "homebridge": "^1.6.0 || ^2.0.0-beta.0",
+    "node": "^18.20.4 || ^20.15.1 || ^22"
   },
   "scripts": {
     "test": "npm link && nodemon"
